--- a/Navbar/Searchbar/style.css
+++ b/Navbar/Searchbar/style.css
@@ -8,10 +8,11 @@
 }
 
 .search-mic{
-    /* border: 2px solid #3d3d3d ; */
+    /* border: 2px solid #3d3d3d; */
     /* border-radius: 50px 50px 50px 50px; */
     margin: 6em;
-    width: 50%;
+    width: 42%;
+    display: flex;
 }
 
 .search-mic input{
@@ -30,7 +31,7 @@
     /* outline-color: blue; */
 }
 
-.search-mic i {
+.bx-search {
     border: 2px solid #3d3d3d;
     border-radius: 0px 50px 50px 0;
     width: 12%;
@@ -49,7 +50,7 @@
     padding: 0.8em;
     border-radius: 8px;
     /* backdrop-filter: blur(10px); */
-    margin: 1.5em 0 0 22em;
+    margin: 1.5em 0 0 -3em;
     opacity: 0;
     cursor: pointer;
     transition: opacity 0.3s ease;
@@ -59,3 +60,9 @@
     opacity: 1;
 }
 
+.bxs-microphone{
+    background-color: #3d3d3d;
+    border-radius: 50px;
+    font-size: 1.5rem;
+    padding: 14px;
+}
