--- a/Navbar/Searchbar/style.css
+++ b/Navbar/Searchbar/style.css
@@ -43,20 +43,23 @@
     background: #3d3d3d;
 }
 
-.search-mic p{
+.search-mic .search{
     font-size: 0.8rem;
     background: rgba(61, 61, 61, 0.42);
     width: 60px;
     padding: 0.8em;
     border-radius: 8px;
     /* backdrop-filter: blur(10px); */
-    margin: 1.5em 0 0 -3em;
+    margin: 1.5em 0 0em -3em;
     opacity: 0;
     cursor: pointer;
+    position: relative;
+    top: 51px;
+    right: 30px;
     transition: opacity 0.3s ease;
 }
 
-.search-mic i:hover + p{
+.search-mic i:hover + .search{
     opacity: 1;
 }
 
