--- a/Navbar/Sidebar/style.css
+++ b/Navbar/Sidebar/style.css
@@ -17,20 +17,20 @@
     background-color: #0F0F0F;
 }
 
-.sidebar-icon{
+/* .sidebar-icon{ */
     /* border: 2px solid green; */
-    width: 17%;
-    padding: 0.3em;
+    /* width: 17%; */
+    /* padding: 0.3em; */
     /* background: #000; */
-    margin-left: 0.3em;
-}
+    /* margin-left: 0.3em; */
+/* } */
 
-.sidebar-icon:hover{
+/* .sidebar-icon:hover{ */
     /* border: none;
     outline: none; */
-    border-radius: 50px;
-    background-color: #3d3d3d;
-}
+    /* border-radius: 50px; */
+    /* background-color: #3d3d3d; */
+/* } */
 
 /* home-shorts-subs */
 
